set up basic home page view

--- a/templates/__base.html
+++ b/templates/__base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +8,8 @@
     <title>Drew Goodman | Full Stack Web Developer</title>
 </head>
 <body>
-    
+    This works!
+    {% block content %}
+    {% endblock content %}
 </body>
 </html>
