--- a/templates/__base.html
+++ b/templates/__base.html
@@ -4,11 +4,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"">
+    <meta http-equiv=" X-UA-Compatible" content="ie=edge">
+    <meta name="author" content="Drew R. Goodman" />
+    <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Drew Goodman | Full Stack Developer" />
+    <meta prefix="og: http://ogp.me/ns#" property="og:description"
+        content="My portfolio site, featuring works in React.js, jQuery, Python, Django and SCSS." />
+
     <title>Drew Goodman | Full Stack Web Developer</title>
+
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/konpa/devicon@master/devicon.min.css">
+    <script src="https://kit.fontawesome.com/d58eb19ed0.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Oswald|Special+Elite|Share+Tech+Mono|Roboto&display=swap"
+        rel="stylesheet" />
+
+    <link rel="stylesheet" href='{% static "css/body.css" %}'>
+    <link rel="stylesheet" href='{% static "css/home.css" %}'>
+    <link rel="stylesheet" href='{% static "css/portfolio.css" %}'>
+    <link rel="stylesheet" href='{% static "css/resume.css" %}'>
+    <link rel="stylesheet" href='{% static "css/skills.css" %}'>
+    <link rel="stylesheet" href='{% static "css/contact.css" %}'>
+    <link rel="stylesheet" href='{% static "css/lightbox.css" %}'>
+    <link rel="stylesheet" href='{% static "css/nav.css" %}'>
+    <link rel="stylesheet" href='{% static "css/sidebar.css" %}'>
+    <link rel="stylesheet" href='{% static "css/media.css" %}'>
+    
+    <style>
+        #home {    
+            background-image: url('{% static "img/background/landing.jpg" %}');
+        }
+    </style>
 </head>
 <body>
-    This works!
     {% block content %}
     {% endblock content %}
 </body>
