--- a/templates/__footer.html
+++ b/templates/__footer.html
@@ -1,5 +1,5 @@
 <div class="page-footer">
     <div>
-        &copy; 2020 Drew Goodman &#124; All rights reserved
+        &copy; {{current_year}} Drew Goodman &#124; All rights reserved
     </div>
 </div>
